# unlabeled-media-tagger

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: API.md  ARCHITECTURE.md  SETUP.md
examples/: config.example.json  config.example.yaml  example_pipeline.py
src/unlabeled_media_tagger/: __init__.py  __main__.py
src/unlabeled_media_tagger/config/: __init__.py  settings.py
src/unlabeled_media_tagger/pipeline/: __init__.py  annotate_image.py  annotate_video.py  compare.py  detect.py  detect_faces.py  enrich.py  extract.py  fetch.py
src/unlabeled_media_tagger/utils/: __init__.py  file_utils.py  logging.py
tests/: __init__.py
tests/config/: test_settings.py
tests/pipeline/: test_compare.py  test_detect.py  test_enrich.py  test_extract.py  test_fetch.py
tests/utils/: test_file_utils.py
