[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unlabeled-media-tagger"
version = "0.1.0"
description = "A modular pipeline for enriching unlabeled photos and videos in Google Drive using open-source computer vision and facial recognition models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "unlabeled-media-tagger contributors"}
]
keywords = ["media", "tagging", "computer-vision", "facial-recognition", "google-drive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies will be added as implementation progresses
    # Examples that may be needed:
    # "google-auth>=2.0.0",
    # "google-auth-oauthlib>=1.0.0",
    # "google-api-python-client>=2.0.0",
    # "opencv-python>=4.0.0",
    # "pillow>=9.0.0",
    # "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
unlabeled-media-tagger = "unlabeled_media_tagger.__main__:main"

[project.urls]
Homepage = "https://github.com/zach8421/unlabeled-media-tagger"
Repository = "https://github.com/zach8421/unlabeled-media-tagger"
Issues = "https://github.com/zach8421/unlabeled-media-tagger/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
